[gd_scene load_steps=52 format=3 uid="uid://d2fcmddkiekgn"]

[ext_resource type="Script" path="res://mushroom.gd" id="1_hbqey"]
[ext_resource type="Texture2D" uid="uid://b1iryoixblsf5" path="res://oak_woods_v1.0/Mushroom/Attack.png" id="1_n2360"]
[ext_resource type="Texture2D" uid="uid://usf2ecwscd3i" path="res://oak_woods_v1.0/Mushroom/Take Hit.png" id="2_umm87"]
[ext_resource type="Texture2D" uid="uid://vvdqldkgjoux" path="res://oak_woods_v1.0/Mushroom/Death.png" id="3_ejgpe"]
[ext_resource type="Texture2D" uid="uid://b002xlv7o6wae" path="res://oak_woods_v1.0/Mushroom/Idle.png" id="4_la6a5"]
[ext_resource type="Texture2D" uid="uid://5tn8smirretb" path="res://oak_woods_v1.0/Mushroom/Run.png" id="5_0uheh"]
[ext_resource type="PackedScene" uid="uid://cm51c56juk8pq" path="res://damage_box.tscn" id="7_khjju"]
[ext_resource type="PackedScene" uid="uid://df006slk45abp" path="res://mob_health.tscn" id="8_foyuf"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pdj2q"]
radius = 13.0
height = 42.0

[sub_resource type="AtlasTexture" id="AtlasTexture_f3p74"]
atlas = ExtResource("1_n2360")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_sd15g"]
atlas = ExtResource("1_n2360")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_hcvm0"]
atlas = ExtResource("1_n2360")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_bx7tk"]
atlas = ExtResource("1_n2360")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_5o5hb"]
atlas = ExtResource("1_n2360")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_joy87"]
atlas = ExtResource("1_n2360")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_lia24"]
atlas = ExtResource("1_n2360")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_83p2t"]
atlas = ExtResource("1_n2360")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_xyy40"]
atlas = ExtResource("2_umm87")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_xaw45"]
atlas = ExtResource("2_umm87")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_a4a5k"]
atlas = ExtResource("2_umm87")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_fko3e"]
atlas = ExtResource("2_umm87")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_dan1b"]
atlas = ExtResource("3_ejgpe")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_8kkfg"]
atlas = ExtResource("3_ejgpe")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_lbd7f"]
atlas = ExtResource("3_ejgpe")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_iej8t"]
atlas = ExtResource("3_ejgpe")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_svbgq"]
atlas = ExtResource("4_la6a5")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_fuf6h"]
atlas = ExtResource("4_la6a5")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_xerq3"]
atlas = ExtResource("4_la6a5")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_iu3ey"]
atlas = ExtResource("4_la6a5")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_hw8ks"]
atlas = ExtResource("4_la6a5")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_v3l2u"]
atlas = ExtResource("4_la6a5")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_b2jiu"]
atlas = ExtResource("4_la6a5")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_w6kwf"]
atlas = ExtResource("4_la6a5")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_sttk6"]
atlas = ExtResource("5_0uheh")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_7yv4t"]
atlas = ExtResource("5_0uheh")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_70m6r"]
atlas = ExtResource("5_0uheh")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_34a1l"]
atlas = ExtResource("5_0uheh")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ricge"]
atlas = ExtResource("5_0uheh")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_w4cwb"]
atlas = ExtResource("5_0uheh")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_bmhkn"]
atlas = ExtResource("5_0uheh")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_itcts"]
atlas = ExtResource("5_0uheh")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_u2x2t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f3p74")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sd15g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hcvm0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bx7tk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5o5hb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_joy87")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lia24")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_83p2t")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xyy40")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xaw45")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a4a5k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fko3e")
}],
"loop": false,
"name": &"damage",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dan1b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8kkfg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lbd7f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iej8t")
}],
"loop": false,
"name": &"death",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_svbgq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fuf6h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xerq3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iu3ey")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hw8ks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3l2u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b2jiu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w6kwf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hw8ks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3l2u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b2jiu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w6kwf")
}],
"loop": false,
"name": &"recover",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sttk6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7yv4t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70m6r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_34a1l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ricge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w4cwb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bmhkn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_itcts")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_sh7s4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("attack_direction/damage_box/hitbox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("attack_direction/attack_range/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_v3d0j"]
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["attack"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("attack_direction/damage_box/hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_p3taf"]
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["damage"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("attack_direction/attack_range/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_vhel3"]
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["death"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("attack_direction/attack_range/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(2.4, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_bwe66"]
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["idle"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("attack_direction/attack_range/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_fc3xe"]
length = 1.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["recover"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("attack_direction/attack_range/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_mtn08"]
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["run"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xj71b"]
_data = {
"RESET": SubResource("Animation_sh7s4"),
"attack": SubResource("Animation_v3d0j"),
"damage": SubResource("Animation_p3taf"),
"death": SubResource("Animation_vhel3"),
"idle": SubResource("Animation_bwe66"),
"recover": SubResource("Animation_fc3xe"),
"run": SubResource("Animation_mtn08")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xjpwj"]
size = Vector2(24, 33)

[node name="mushroom" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_hbqey")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_pdj2q")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -7)
sprite_frames = SubResource("SpriteFrames_u2x2t")
animation = &"death"
frame = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_xj71b")
}

[node name="attack_direction" type="Node2D" parent="."]

[node name="attack_range" type="Area2D" parent="attack_direction"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_direction/attack_range"]
position = Vector2(28, 2.5)
shape = SubResource("RectangleShape2D_xjpwj")
disabled = true

[node name="damage_box" parent="attack_direction" instance=ExtResource("7_khjju")]
position = Vector2(0, 6)

[node name="hurtbox" parent="attack_direction/damage_box" index="0"]
collision_layer = 32
collision_mask = 0

[node name="hitbox" parent="attack_direction/damage_box" index="1"]
position = Vector2(33, -4)
scale = Vector2(1.28, 1.28)
collision_layer = 0
collision_mask = 16

[node name="MobHealth" parent="." instance=ExtResource("8_foyuf")]
position = Vector2(0, -25)
scale = Vector2(0.6, 0.6)

[connection signal="body_entered" from="attack_direction/attack_range" to="." method="_on_attack_range_body_entered"]
[connection signal="area_entered" from="attack_direction/damage_box/hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="damage" from="MobHealth" to="." method="_on_mob_health_damage"]
[connection signal="no_health" from="MobHealth" to="." method="_on_mob_health_no_health"]

[editable path="attack_direction/damage_box"]
